--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,9 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 spring.mail.host=smtp.sina.com
 spring.mail.port=465
 spring.mail.username=lzltommy@sina.com
-spring.mail.password=yld923990805abc.
+spring.mail.password=3ae1e6741178be6b
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtl.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
