--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,6 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtl.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+#community
+community.path.domain=http://localhost:8080
