--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,3 +54,12 @@ spring.kafka.consumer.auto-commit-interval=3000
 # ElasticsearchProperties
 spring.data.elasticsearch.cluster-name=nowcoder
 spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+
+#TaskExecutorProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+
+#TaskSchedulingProperties
+spring.task.scheduling.pool.size=5
+
