--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,3 +63,13 @@ spring.task.execution.pool.queue-capacity=100
 #TaskSchedulingProperties
 spring.task.scheduling.pool.size=5
 
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
