--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,3 +76,11 @@ spring.quartz.properties.org.quartz.threadPool.threadCount=5
 #wk
 wk.image.command=d:/work/wkhtmltopdf/bin/wkhtmltoimage
 wk.image.storage=d:/work/data/wk-images
+
+#QiNiu
+qiniu.key.access=N6_69665d-s1y20HJBn0iEQUiTkTLx8c1FnvYS6j
+qiniu.key.secret=zfoc7F-LUbadDWzh3HpHsOBHBOtbjFtCdyxIp3aT
+qiniu.bucket.header.name=community-header-lzl
+qiniu.bucket.header.url=http://r9wshmstq.hb-bkt.clouddn.com
+qiniu.bucket.share.name=community-share-lzl
+qiniu.bucket.share.url=http://r9wszuwfj.hb-bkt.clouddn.com
