多级缓存 Caffine Redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,3 +84,7 @@ qiniu.bucket.header.name=community-header-lzl
 qiniu.bucket.header.url=http://r9wshmstq.hb-bkt.clouddn.com
 qiniu.bucket.share.name=community-share-lzl
 qiniu.bucket.share.url=http://r9wszuwfj.hb-bkt.clouddn.com
+
+#caffeine
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
